Feature / Packaged platform distribution for Linux and macOS (#170)
* Stub start script templates for services

* Update to Gradle 7.5.1

* Start work on the startup script for Linux / macOS

* Pass CLASSPATH in an environment variable

* Start script work for Linux / macOS

* Work on Windows control script

* Fixes in Windows start script

* Add main function in Windows start script

* Fix typo in Unix start script

* Move start script templates into dist folder

* Create skeleton dist folder, with example config and empty folder structure

* Work on service control script for Linux / macOS

* Use new dist structure in metadata service dist tasks

* Update service control script to supply env vars for logging

* Add env.sh to the sample config

* Updates to service control script for Linux / macOS

* More work on Linux / macOS start script

* Provide default value for CONFIG_FILE in start scripts

* Use the new distribution layout and start scripts for all the platform services

* Set the default config file for the gateway to trac-gateway.yaml

* Update control script to handle interactive sessions and tasks

* Add control script for deploy-metadb

* Build platform distributions in packaging workflow

* Disable Windows service control scripts for now

* Update packages published for each GitHub release

* Do not auto-release Maven artifacts on publish

* Tweak naming in packaging workflow

* Turn Sonatype auto-release back on after successful packaging test

* Move OWASP false positives for SnakeYAML

* Use "etc" as the config dir in platform packages, to align with Unix file system standard