@@ -24,12 +24,22 @@ apply from: "${rootProject.projectDir.path}/gradle/functions.gradle"
 
 description = "TRAC D.A.P. orchestrator service, stateless service component to answer the TRAC orchestor API"
 
-ext.addVersionInfo(sourceSets.getByName("main"), "TRAC Orchestrator Service")
-
 application {
+
     mainClass.set("org.finos.tracdap.svc.orch.TracOrchestratorService")
+
+    // JVM flags needed for Arrow / Netty / gRPC to access native memory
+    applicationDefaultJvmArgs = [
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+            "-Dio.netty.tryReflectionSetAccessible=true"
+    ]
+
+    // Working dir when running in the IDE
     tasks.run.workingDir = rootProject.projectDir
 }
+
+ext.addVersionInfo(sourceSets.getByName("main"), "TRAC Orchestrator Service")
 
 dependencies {
 
@@ -60,3 +70,23 @@ dependencies {
 
 ext.pluginDependency("AWS_CONFIG", project(":aws-config"))
 ext.pluginDependency("GCP_CONFIG", project(":gcp-config"))
+
+distributions {
+    main {
+        contents {
+            into("") { from("${rootDir}/dist/template") }
+        }
+    }
+}
+
+tasks.withType(CreateStartScripts) {
+
+    unixStartScriptGenerator.template = resources.text.fromFile("${rootDir}/dist/scripts/service-ctrl.sh")
+    windowsStartScriptGenerator.template = resources.text.fromFile("${rootDir}/dist/scripts/service-ctrl.bat")
+
+    // Default config file location
+    startScripts { doLast {
+        unixScript.text = unixScript.text.replace("<DEFAULT_CONFIG_FILE>", "trac-platform.yaml")
+        windowsScript.text = windowsScript.text.replace("<DEFAULT_CONFIG_FILE>", "trac-platform.yaml")
+    }}
+}
